# vmlx

./: .env.signing.example  .gitignore  AUDIT_FIXES.md  BENCHMARK_RESULTS.md  CHANGELOG.md  COMMIT-MESSAGE-DRAFT.md  FIXES_SUMMARY.md  PACKAGE_RELEASE_NOTES.md  PRODUCTION_READY.md  PROGRESS.md  Package.swift  README.md  SESSION-CHANGES-2026-04-18.md  SWIFT-AUDIT-2026-04-18.md  SWIFT-V2-PRODUCTION-AUDIT-2026-04-18.md  TEST_PLAN.md  VERIFICATION.md  deploy.sh  latest.json  nohup.out  project.yml  pyproject.toml  pytest.ini  test_cancel_concurrent.py  test_cancel_live.py  test_cancel_simple.py  test_quantized_kv_prefix_cache.py  verify_fixes.sh
.agent/: rules
.agent/workflows/: build.md
.claude/: cross-interop-verify.sh  hookify.ralph-production-audit.local.md  image-lifecycle-verify.sh  ralph-loop.local.md
.factory/: init.sh  services.yaml
Examples/: README.md
Examples/CacheMatrixProbe/: main.swift
Examples/DSV4FlashRuntime/: main.swift
Examples/JANGPressBalloonBench/: main.swift
Examples/JANGPressCompare/: main.swift
Examples/JANGPressDebug/: main.swift
Examples/JANGPressE2E/: main.swift
Examples/JANGPressMultiTurn/: main.swift
Examples/JANGPressRSSBench/: main.swift
Examples/JANGPressSmoke/: main.swift
Examples/LagunaRuntime/: main.swift
Examples/Mistral3Runtime/: main.swift
Examples/RuntimeShared/: RuntimeShared.swift
Examples/scripts/: jangpress_sweep.sh
PLANS/: disk-persistent-kv-cache.md  v1-changelog.md
Sources/Cmlx/: default.metallib
Sources/MLX/: Device.swift  Memory.swift  Stream.swift
Sources/vMLXApp/: vMLXApp.swift
Sources/vMLXCLI/: main.swift
Sources/vMLXEmbedders/: Configuration.swift  EmbeddingModel.swift  Load.swift  Models.swift  Pooling.swift
Sources/vMLXEngine/: CapabilityDetector.swift  ChatRequest.swift  DebugBundle.swift  DownloadManager.swift  Engine.swift  EngineAdapters.swift  EngineDFlash.swift  EngineFlashMoE.swift  EngineState.swift  EngineTTS.swift  EngineTranscribe.swift  FIMTruncator.swift  FamilySamplingDefaults.swift  FluxBackend.swift  GenerationLock.swift  ImageGen.swift  ModelCapabilities.swift  ModelDetector.swift  Stream.swift  StreamDFlash.swift  TransformersTokenizerLoader.swift
Sources/vMLXFlux/: FluxEngine.swift
Sources/vMLXFluxKit/: EditOps.swift  FluxModel.swift  JangSupport.swift  (+4 more)
autoresearch/: README.md  agent.py  analysis.ipynb  dataset.json  program.md  results.tsv  run_eval.py
docs/: AUDIT-API-SURFACE-PARITY.md  AUDIT-QWEN-AFFINE-JANG-VLM.md  AUDIT-SSM-ASYNC-REDERIVE.md  AUDIT-THINKING-TEMPLATE-RENDER.md  CACHE-MATRIX.md  CODEX_2026_05_05_FIXES.md  CROSS-CHECK-MATRIX.md  DSV4-PYTHON-AUDIT-2026-05-03.md  DSV4_FIX_NUANCES.md  DSV4_REASONING_MODE_AUDIT_2026_05_06.md  DSV4_RUNTIME_PROGRESS_LOG.md  DSV4_RUNTIME_REGRESSION_TRACE.md  GEMMA4-NOTES.md  JANG_DOCS_REVIEW_NEXT_ACTIONS.md  LM-EVAL-HARNESS-COMPATIBILITY.md  LM-EVAL-HARNESS-IMPLEMENTATION-SUMMARY.md  LOGPROBS-IMPLEMENTATION.md  MODEL-QUIRKS.md  PERF-MOE-HALF-SPEED-ROOT-CAUSE.md  PROJECT-STATE.md  SESSION_2026_05_05_AUDIT.md  SESSION_2026_05_06_PYTHON_ENGINE_APP_AUDIT.md  TURBOQUANT_KV_CACHE_CODEC_PLAN.md  index.md  production-audit-2026-04-22.md
examples/: demo_curl_image.sh  demo_curl_text.sh  demo_curl_video.sh  demo_openai_image.py  demo_openai_text.py  demo_openai_video.py  mllm_benchmark.py  mllm_example.py  simple_generate.py  test_openai_compatibility.py  test_video.py  video_benchmark.py
notes/: AUDIT-2026-03-25.md  continuous-batching-audit.md  prompt-lookup-decoding.md
panel/: .gitignore  CHANGELOG.md  ENGINE-UPDATES.md  LICENSE  LOGO-README.md  PROJECT.md  README.md  SETUP.md  bundled-python  components.json  electron.vite.config.ts  generate-icons.js  node_modules  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vitest.config.ts
productionapp/: INSTALL.md  TECHNICAL-NOTES.md
scripts/: bench-perf-parity.sh  build-dev-app.sh  build-release.sh  cache-hybrid-verify.sh  final-release-test.sh  lint-typed-mlx-scalars.sh  multi-turn-thinking-matrix.sh  notarize-only.sh  per-model-pmc.sh  stage-metallib.sh  test-matrix.sh  wake-sleep-matrix.sh
tests/: __init__.py  conftest.py  load_test_vlm.py  stress_tool_calls.py  test_anthropic_adapter.py  test_api_models.py  test_api_surface_parity.py  test_api_utils.py  test_audio.py  test_audit_fixes.py  test_batched_speculative.py  test_batching.py  test_batching_deterministic.py  test_block_disk_bfloat16.py  test_cache_bypass.py  test_cache_record_validator.py  test_cache_types.py  test_chat_template_kwargs.py  test_cli_commands.py  test_config_sources.py  test_cross_matrix_audit_runner.py  test_deepgram_api.py  test_disk_cache_unit.py  test_disk_streaming.py  test_dsv4_bundle_integrity.py  test_dsv4_paged_cache.py  test_dsv4_thinking_finalizer.py  test_e2e_live.py  test_emoji_comprehensive.py  test_engine_audit.py  test_flash_moe_loader.py  test_gemma3_27b_comprehensive.py  test_hybrid_batching.py  test_hybrid_prefix_cache.py  test_image_api.py  test_image_gen.py  test_image_gen_engine.py  test_jang_loader.py  test_lmstudio_api.py  test_medgemma_comprehensive.py  (+40 more)
tmp/: apiendpoints.md  local-cloud-apis.md  openapi.yml  pr-review-pass.md
vMLX/: Info.plist  vMLX.entitlements
vllm_mlx/: __init__.py  block_disk_store.py  cli.py  disk_cache.py  engine_core.py  memory_cache.py  mllm_batch_generator.py  mllm_scheduler.py  mlx_platform.py  model_config_registry.py  model_configs.py  output_collector.py  paged_cache.py  prefix_cache.py  request.py  scheduler.py  server.py  speculative.py  vision_embedding_cache.py
vmlx_engine/: __init__.py  block_disk_store.py  cache_record_validator.py  cli.py  disk_cache.py  engine_core.py  flash_moe_config.py  image_gen.py  memory_cache.py  mllm_batch_generator.py  mllm_cache.py  mllm_scheduler.py  model_config_registry.py  model_configs.py  model_runner.py  multimodal_processor.py  optimizations.py  output_collector.py  paged_cache.py  prefix_cache.py  prompt_lookup.py  reranker.py  scheduler.py  server.py  simple.py  speculative.py  state_machine.py  tq_disk_store.py  vision_embedding_cache.py  worker.py
(+1152 files in other folders)
